--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,5 +57,8 @@
     "edu.wpi.first.math.**.proto.*",
     "edu.wpi.first.math.**.struct.*",
   ],
-  "editor.formatOnSave": false
+  "editor.formatOnSave": false,
+  "java.format.settings.url": ".vscode/RamenFormatting.xml",
+  "java.checkstyle.configuration": "${workspaceFolder}/.vscode/RamenCheckstyle.xml",
+  "java.checkstyle.version": "10.23.0"
 }
