--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,7 @@
     "edu.wpi.first.math.**.struct.*",
   ],
   "editor.formatOnSave": false,
-  "java.format.settings.url": ".vscode/RamenFormatting.xml"
+  "java.format.settings.url": ".vscode/RamenFormatting.xml",
+  "java.checkstyle.configuration": "${workspaceFolder}/.vscode/RamenCheckstyle.xml",
+  "java.checkstyle.version": "10.23.0"
 }
